kubernetes/jaeger/openshift.agent.template.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: template.openshift.io/v1
kind: Template
labels:
  app: jaeger-agent
  jaeger-infra: agent-instance
  template: jaeger-agent-template
metadata:
  annotations:
    description: Jaeger Distributed Tracing Agent
    iconClass: icon-go-gopher
    openshift.io/display-name: Jaeger Agent(production)
    tags: instant-app,tracing,opentracing,jaeger,agent
  labels:
    app: jaeger-agent
    jaeger-infra: agent-instance
  name: jaeger-agent-template
  namespace: jaeger
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: jaeger-agent
    namespace: jaeger
    labels:
      app: jaeger
      jaeger-infra: agent-service
  spec:
    ports:
     - name: thrift-compact
       port: 6831
       protocol: UDP
       targetPort: 6831
     - name: thrift-binary
       port: 6832
       protocol: UDP
       targetPort: 6832
     - name: http
       port: 5778
       protocol: TCP
       targetPort: 5778
     - name: zipkin-thrift
       port: 5775
       protocol: UDP
       targetPort: 5775
     - name: health
       port: 14271
       protocol: TCP
       targetPort: 14271
    selector:
      jaeger-infra: agent-instance
    type: ClusterIP
- apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    labels:
      app: jaeger
      jaeger-infra: agent-instance
    name: jaeger-agent
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: jaeger
          jaeger-infra: agent-instance
      spec:
        containers:
        - command:
          - /go/bin/agent-linux
          - --reporter.grpc.host-port=jaeger-collector:14250
          - --processor.jaeger-binary.server-queue-size=5000
          - --discovery.conn-check-timeout=500ms
          image: jaegertracing/jaeger-agent:1.17.1
          name: jaeger-agent
          ports:
          - containerPort: 5775
            protocol: UDP
          - containerPort: 6831
            protocol: UDP
          - containerPort: 6832
            protocol: UDP
          - containerPort: 5778
            protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 500M
            requests:
              cpu: 200m
              memory: 500M
